# smc-speedtest

./: LICENSE  README.md  all_data.csv  build.gradle  settings.gradle
app/: build.gradle  google-services.json
app/src/androidTest/java/com/herontheb1rd/smcspeedtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ServerConnector.cpp  SpeedTest.cpp  SpeedTest.h  SpeedTestClient.cpp  SpeedTestClient.h  SpeedTestRunner.cpp  json.h  main.cpp  native-lib.cpp
app/src/main/java/com/herontheb1rd/smcspeedtest/: EchoPacketBuilder.java  HeatMapFragment.java  MainActivity.java  NetPerf.java  Ping.java  Place.java  Player.java  PredictionsFragment.java  ProfileFragment.java  Results.java  ResultsFragment.java  RunTestFragment.java  ScoreboardFragment.java  ServerInfo.java  SignalPerf.java  SpeedtestJava.java  TestLoaderFragment.java  predictionsFragment.java  resultsFragment.java  runTestFragment.java  speedtestJava.java
app/src/main/res/drawable/: better_location_background.xml  button_background.xml  edit_icon.xml  result_background.xml
app/src/main/res/layout/: activity_main.xml  fragment_heat_map.xml  fragment_predictions.xml  fragment_profile.xml  fragment_results.xml  fragment_run_test.xml  fragment_scoreboard.xml  fragment_test_loader.xml
app/src/main/res/menu/: bottom_nav_menu.xml  nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  preloaded_fonts.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/herontheb1rd/smcspeedtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
